commit for common project from LAPTOP-7KQRMTC0

--- a/common/open_command_files/.gitignore
+++ b/common/open_command_files/.gitignore
@@ -1,2 +1,12 @@
-!.gitignore
-!open-command-prompt-here.html
+.gitignore
+.htaccess
+.time
+favicon.ico
+favicon.bmp
+open-command-prompt-here.html
+nohup.out
+clipb.txt
+new.txt
+
+
+
